--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@ justify-content:center;
 align-items:center;
 overflow:hidden;
 background:linear-gradient(135deg,#ff758c,#ff7eb3);
-transition:1s ease;
 color:white;
 text-align:center;
 }
@@ -66,5 +65,216 @@ background:white;
 color:#ff4e88;
 }
 
-#
+#noBtn{
+background:#ff4e88;
+color:white;
+position:absolute;
+}
+
+button:hover{
+transform:scale(1.1);
+}
+
+#countdown{
+margin-top:15px;
+font-size:1.2rem;
+}
+
+#message{
+margin-top:15px;
+white-space:pre-line;
+}
+
+.final{
+font-size:2rem;
+margin-top:20px;
+font-weight:700;
+display:none;
+}
+
+/* Floating hearts */
+.heart{
+position:fixed;
+font-size:20px;
+animation:float 6s linear forwards;
+}
+
+@keyframes float{
+from{ transform:translateY(100vh) scale(1); }
+to{ transform:translateY(-10vh) scale(1.5); }
+}
+
+/* Confetti */
+.confetti{
+position:fixed;
+width:10px;
+height:10px;
+top:-10px;
+animation:fall linear forwards;
+}
+
+@keyframes fall{
+to{
+transform:translateY(100vh) rotate(720deg);
+}
+}
+</style>
+</head>
+
+<body>
+
+<div class="container">
+
+<div class="name">Mahi ❤️</div>
+<h2>Will you be my Valentine?</h2>
+
+<div id="buttons">
+<button id="yesBtn">YES</button>
+<button id="noBtn">NO 💔</button>
+</div>
+
+<div id="countdown"></div>
+<p id="message"></p>
+<div class="final" id="finalText">Meri Heeriye, ILY sooo muchhh ❤️</div>
+
+</div>
+
+<!-- 🎵 AUDIO -->
+<audio id="bgMusic">
+<source src="mahi-song.mp3" type="audio/mp3">
+</audio>
+
+<script>
+
+const yesBtn=document.getElementById("yesBtn");
+const noBtn=document.getElementById("noBtn");
+const message=document.getElementById("message");
+const bgMusic=document.getElementById("bgMusic");
+const countdown=document.getElementById("countdown");
+const finalText=document.getElementById("finalText");
+
+noBtn.style.top="70px";
+noBtn.style.left="55%";
+
+/* NO BUTTON RUNS AWAY */
+document.addEventListener("mousemove",(e)=>{
+const rect=noBtn.getBoundingClientRect();
+const dist=Math.hypot(e.clientX-rect.left,e.clientY-rect.top);
+if(dist<100){
+const x=Math.random()*(window.innerWidth-120);
+const y=Math.random()*(window.innerHeight-60);
+noBtn.style.left=x+"px";
+noBtn.style.top=y+"px";
+}
+});
+
+/* PLAY ONLY 1:16 to 1:26 LOOP */
+function playRomanticClip(){
+bgMusic.currentTime = 76;
+bgMusic.play();
+
+const stopTime = 86;
+
+setInterval(()=>{
+if(bgMusic.currentTime >= stopTime){
+bgMusic.currentTime = 76;
+}
+},200);
+}
+
+/* YES CLICK */
+yesBtn.addEventListener("click",()=>{
+
+playRomanticClip();
+launchHearts();
+launchConfetti();
+
+document.getElementById("buttons").style.display="none";
+
+startCountdown();
+
+typeMessage(`Mahi... ❤️
+
+From the moment you came into my life,
+everything became brighter.
+
+You are my peace.
+My happiness.
+My forever.
+
+I promise to love you,
+respect you,
+and choose you —
+every single day.
+
+Forever.`);
+
+setTimeout(()=>{
+finalText.style.display="block";
+},12000);
+
+});
+
+/* TYPEWRITER */
+function typeMessage(text){
+let i=0;
+message.innerHTML="";
+let interval=setInterval(()=>{
+message.innerHTML+=text.charAt(i);
+i++;
+if(i>=text.length) clearInterval(interval);
+},40);
+}
+
+/* COUNTDOWN */
+function startCountdown(){
+let time=10;
+countdown.innerHTML="Proposal moment in: "+time;
+let timer=setInterval(()=>{
+time--;
+countdown.innerHTML="Proposal moment in: "+time;
+if(time<=0){
+clearInterval(timer);
+countdown.innerHTML="She said YES! 💍❤️";
+}
+},1000);
+}
+
+/* HEARTS */
+function launchHearts(){
+setInterval(()=>{
+const heart=document.createElement("div");
+heart.classList.add("heart");
+heart.innerHTML="💖";
+heart.style.left=Math.random()*100+"vw";
+heart.style.animationDuration=(Math.random()*3+3)+"s";
+document.body.appendChild(heart);
+setTimeout(()=>heart.remove(),6000);
+},500);
+}
+
+/* CONFETTI */
+function launchConfetti(){
+const duration=5000;
+const end=Date.now()+duration;
+const interval=setInterval(()=>{
+if(Date.now()>end){
+clearInterval(interval);
+return;
+}
+const confetti=document.createElement("div");
+confetti.classList.add("confetti");
+confetti.style.left=Math.random()*window.innerWidth+"px";
+confetti.style.background=`hsl(${Math.random()*360},100%,50%)`;
+confetti.style.animationDuration=(Math.random()*3+2)+"s";
+document.body.appendChild(confetti);
+setTimeout(()=>confetti.remove(),5000);
+},100);
+}
+
+</script>
+
+</body>
+</html>
+
 
